Moos Changelog

!	Security fix and improve;
*	Common bug fix and improve;
+	Feature add;
-	Feature remove;


1.6.3
=====
YYYY-MM-DD
* New Moss installation TUI;
+ Add vim and wget packages check and install;
* Fix root's mailbox fill up with ntpdate time sync message;
! Fix Zabbix Agent can not be started;
! Fix SlatStack Minion can not be started;
* Remove Zabbix Agent 3rd-templates;
To be continued.


1.6.2
=====
2014-11-30
* Fix MySQL logs rotate;
* Fix www user home directory location;
* Add SaltStack minion. According to user configure;
* Add Zabbix Nginx status monitor configuration and script;
* Enhance Zabbix agent configuration;
* Nginx stub_status and PHP FastCGI status allow from all by default;
* Enhance Nginx 'moss' access log format;
* Turn PHP 'log_errors' on;
* Trun auditd service on by default;
* Enhance vimrc settings;
- Remove puppet;


1.6.1
=====
2014-11-12
* Fix group sa users' sudo privilege, add 'vi' command;


1.6.0
=====
2014-11-07
+ Support get software list and packages from local or file server.
  You could set package get mode by edit moss.conf.
  'local' -  Package list and all packages are stored in ./src direcotry and
             will be used by moss during installation;
  'remote' - Download package list and all packages from a remote file server;
+ Support change CentOS and EPEL to faster YUM source;
+ Add memcache and memcached;
+ Add SaltStack minion;
* Upgrade Nginx to version 1.6.2, and optimize compile parameter;
* Upgrade PHP to version 5.5.18 and optimize compile parameter;
* Upgrade KeepAlived to version 1.2.13;
* Upgrade MySQL to version 5.6.21;
* Upgrade Percona XtraBackup to version 2.2.5;
* Upgrade Redis to version 2.8.17;
* Upgrade Varnish to version 3.0.6;
* Upgrade OpenSSL to version 1.0.1j;
* Upgrade PCRE to version 8.36;
* Upgrade XCache to version 3.2.0;
* Upgrade Zabbix to version 2.4.1;
* Update NTP time servers;
* Support set SSH authentication method in moss.conf;